--- a/resources/react/assets/sass/components/_jobs-list.scss
+++ b/resources/react/assets/sass/components/_jobs-list.scss
@@ -118,6 +118,7 @@
   color: $color-medium-black;
   line-height: 1.762;
   letter-spacing: 0.06em;
+  word-break: break-word;
 
   margin-top: 29px;
 }
@@ -125,6 +126,11 @@
 .job-list__item-description {
   letter-spacing: 0.06em;
   line-height: 1.857;
+  word-break: break-word;
+}
+
+.job-list__item-button {
+  display: block;
 }
 
 .job-list__item-pills {
